heats direction rtl + sponsers gap fix

--- a/src/components/sponsers/componets/sponser-card/SponserCard.scss
+++ b/src/components/sponsers/componets/sponser-card/SponserCard.scss
@@ -14,7 +14,7 @@
     z-index: 8;
     text-align: center;
     gap: 1rem;
-    max-width: 11rem;
+    // max-width: 11rem;
     margin: 1rem auto;
     height: 12rem;
 
