--- a/src/pages/home/heats/Heats.scss
+++ b/src/pages/home/heats/Heats.scss
@@ -75,6 +75,7 @@
         gap: 0.5rem;
         display: flex;
         flex-direction: column;
+        direction: rtl;
 
         h3 {
             overflow: hidden;
